--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "clappr": "^0.3.13",
+    "clappr-video360": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "less": "^4.1.2"
   }
 }
